@@ -1,3 +1,13 @@
+2020-01-09  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	balsa-index: minor cleanup
+
+	* src/balsa-index.c (bndx_scroll_on_open_idle): rename 'total'
+	to 'n_children', as in:
+	(balsa_index_ensure_visible): use
+	gtk_tree_path_new_from_indices() instead of
+	gtk_tree_model_iter_nth_child() and gtk_tree_model_get_path().
+
 2020-01-08  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	libbalsa/x509-cert-widget: keep scan-build happy
